--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
     <h2>@container</h2>
 
-    <h3>@fluid container</h3>
+    <h3 class="container">@fluid container</h3>
     <div>
       This is a fluid container and it will go till the end of the page.
     </div>
 
     <h3>@center container</h3>
-    <div>
+    <div class="container container-center">
       This is a center container and it will go till a given width and center a
       content.
     </div>
