--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <h2>@list</h2>
 
     <h3>@unordered list</h3>
-    <ul>
+    <p>this list will not have bullet</p>
+    <ul class="list-non-bullet">
       <li>item</li>
       <li>item</li>
       <li>item</li>
@@ -60,15 +61,15 @@
     </ul>
 
     <h3>@unordered inline list</h3>
-    <ul>
-      <li>inline item</li>
-      <li>inline item</li>
-      <li>inline item</li>
-      <li>inline item</li>
+    <ul class="list-non-bullet">
+      <li class="list-item-inline">inline item</li>
+      <li class="list-item-inline">inline item</li>
+      <li class="list-item-inline">inline item</li>
+      <li class="list-item-inline">inline item</li>
     </ul>
 
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
       <li>item</li>
       <li>item</li>
       <li>item</li>
