style: add hero

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
     <hr />
 
     <h2>@header</h2>
-    <header>
-      <img src="images/hero.svg" alt="programmer" />
-      <h1>heading inside header/hero</h1>
+    <header class="hero">
+      <img class="hero-img" src="images/hero.svg" alt="programmer" />
+      <h1 class="hero-heading">
+        heading inside <span class="hero-inverted">header/hero</span>
+      </h1>
     </header>
 
     <hr />
