style: add section fix nav

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
 
     <h2>@section</h2>
 
-    <section>
-      <h3>@white section</h3>
+    <section class="section">
+      <h1>@white section</h1>
       <p>This will have white background.</p>
     </section>
 
-    <section>
-      <h3>@offwhite section</h3>
+    <section class="section ow">
+      <h1>@offwhite section</h1>
       <p>This will have gray background.</p>
     </section>
 
