--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <h2>@container</h2>
 
-    <h3 class="container">@fluid container</h3>
-    <div>
+    <h3>@fluid container</h3>
+    <div class="container">
       This is a fluid container and it will go till the end of the page.
     </div>
 
@@ -123,12 +123,14 @@
 
     <h2>@footer</h2>
 
-    <footer>
-      <div>some small headings inside a footer</div>
-      <ul>
-        <li>socialone</li>
-        <li>socialtwo</li>
-        <li>socialthree</li>
+    <footer class="footer">
+      <div><small>some small headings inside a footer</small></div>
+      <ul class="list-non-bullet">
+        <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
+        <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
+        <li class="list-item-inline">
+          <a class="link" href="/">socialthree</a>
+        </li>
       </ul>
     </footer>
   </body>
