--- a/blogs.html
+++ b/blogs.html
@@ -11,49 +11,59 @@
       <div class="nav-brand">Adarsh Balika</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-          <a class="link link-active" href="/">home</a>
+          <a class="link" href="/">home</a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="/projects.html">projects</a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="/blogs.html">blogs</a>
+          <a class="link link-active" href="/blogs.html">blogs</a>
         </li>
       </ul>
     </nav>
 
     <header class="hero">
-      <img class="hero-img" src="images/hero.svg" alt="programmer" />
+      <!-- <img class="hero-img" src="images/hero.svg" alt="programmer" /> -->
       <h1 class="hero-heading">
-        Adarsh Balika The
-        <span class="hero-inverted">Web Developer</span>
+        Adarsh Balika's
+        <span class="hero-inverted">Blogs</span>
       </h1>
     </header>
 
     <section class="section ow">
-      <h1>Technologies</h1>
+      <h1>Dummy blog one</h1>
+      <small>November, 2020</small>
       <p>
-        I am familier with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS and Web
-        Hosting.
+        he most well-known dummy text is the 'Lorem Ipsum', which is said to
+        have originated in the 16th century. Lorem Ipsum is composed in a
+        pseudo-Latin language which more or less corresponds to 'proper' Latin.
+        It contains a series of real Latin words.
       </p>
+      <a class="link link-primary" href="/dummy-blog.html">Read More</a>
     </section>
 
     <section class="section">
-      <h1>Projects</h1>
+      <h1>Dummy blog one</h1>
+      <small>November, 2020</small>
       <p>
-        I like to showcase my work and thus, you can see my project hosted
-        online.
+        he most well-known dummy text is the 'Lorem Ipsum', which is said to
+        have originated in the 16th century. Lorem Ipsum is composed in a
+        pseudo-Latin language which more or less corresponds to 'proper' Latin.
+        It contains a series of real Latin words.
       </p>
-      <a class="link link-primary" href="/projects.html">Browse Projects</a>
+      <a class="link link-primary" href="/dummy-blog.html">Read More</a>
     </section>
 
     <section class="section ow">
-      <h1>Blogs</h1>
+      <h1>Dummy blog one</h1>
+      <small>November, 2020</small>
       <p>
-        I am also working on some technical and non-technical blogs. I like to
-        document my journey of learning.
+        he most well-known dummy text is the 'Lorem Ipsum', which is said to
+        have originated in the 16th century. Lorem Ipsum is composed in a
+        pseudo-Latin language which more or less corresponds to 'proper' Latin.
+        It contains a series of real Latin words.
       </p>
-      <a class="link link-primary" href="/blogs.html">Read Blogs</a>
+      <a class="link link-primary" href="/dummy-blog.html">Read More</a>
     </section>
 
     <footer class="footer">
